.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/similar-2.7.0/src/text/snapshots/similar__text__line_ops.snap
---
source: src/text/mod.rs
expression: "&changes"
---
[
    Change {
        tag: Equal,
        old_index: Some(
            0,
        ),
        new_index: Some(
            0,
        ),
        value: "Hello World\n",
    },
    Change {
        tag: Delete,
        old_index: Some(
            1,
        ),
        new_index: None,
        value: "some stuff here\n",
    },
    Change {
        tag: Insert,
        old_index: None,
        new_index: Some(
            1,
        ),
        value: "some amazing stuff here\n",
    },
    Change {
        tag: Equal,
        old_index: Some(
            2,
        ),
        new_index: Some(
            2,
        ),
        value: "some more stuff here\n",
    },
]
