.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/similar-2.7.0/src/text/snapshots/similar__text__serde.snap
---
source: src/text/mod.rs
expression: "&json"

---
[
  {
    "tag": "insert",
    "old_index": null,
    "new_index": 0,
    "value": "Stuff\n"
  },
  {
    "tag": "equal",
    "old_index": 0,
    "new_index": 1,
    "value": "Hello World\n"
  },
  {
    "tag": "delete",
    "old_index": 1,
    "new_index": null,
    "value": "some stuff here\n"
  },
  {
    "tag": "insert",
    "old_index": null,
    "new_index": 2,
    "value": "some amazing stuff here\n"
  },
  {
    "tag": "equal",
    "old_index": 2,
    "new_index": 3,
    "value": "some more stuff here\n"
  },
  {
    "tag": "delete",
    "old_index": 3,
    "new_index": null,
    "value": "\n"
  },
  {
    "tag": "delete",
    "old_index": 4,
    "new_index": null,
    "value": "Aha stuff here\n"
  },
  {
    "tag": "delete",
    "old_index": 5,
    "new_index": null,
    "value": "and more stuff"
  }
]
